--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server"
+    "build": "webpack",
+    "start": "webpack-dev-server --inline"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "tag-loader": "^0.3.0",
+    "babel-preset-es2015-riot": "^1.0.4",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.3",
+    "riotjs-loader": "^3.0.0"
   },
   "dependencies": {
     "riot": "^2.3.18"
